# cost_accounting

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  finance.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4e767668dbe0_add_tables.py  4e767668dbe0_initial_migration.py  7598617a985e_clean_start.py  af914c1abcba_initial.py  d74888e54f65_initial_migration.py
app/: database.py  dependency.py  models.py
app/api/v1/: operations.py  users.py  wallets.py
app/repository/: operations.py  users.py  wallets.py
app/service/: operations.py  users.py  wallets.py
app/static/: index.html
app/static/js/: app.js
src/: main.py
tests/test_api/: test_operations.py
