[project]
name = "cost-accounting"
version = "0.1.0"
description = ""
authors = [
    {name = "ivxmirov", email = "iterum343@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1,<0.136.0",
    "uvicorn>=0.42.0,<0.43.0",
    "sqlalchemy>=2.0.48,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "aiohttp>=3.13.5,<4.0.0",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "mypy>=1.20.2",
    "alembic>=1.18.5",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "alembic",
    "test-reports",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
]

[tool.ruff.format]
# Форматирование фрагментов кода в докстрингах
docstring-code-format = true
# Стиль кавычек
quote-style = "double"
# Перенос элементов в зависимости от запятой в конце строки
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
# Перенос импортов в зависимости от запятой в конце строки
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
follow_imports = "normal"
exclude = [
    "venv/",
    ".venv/",
    "tests/",
    "migrations/",
    ".*/__pycache__/",
    "alembic/",
    "test-reports/",
]
cache_dir = ".mypy_cache"

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "alembic/**",
    "test-reports/**",
    ".venv",
]
